test/files/neg/t6574.check
t6574.scala:3: error: could not optimize @tailrec annotated method notTailPos$extension: it contains a recursive call not in tail position
    this.notTailPos[Z](a)(b)
                         ^
1 error
